# password-manager

./: .gitignore  Cargo.toml  README.md  _pwm  nota.txt
src/: cli.rs  command_line.rs  lib.rs  main.rs  password.rs
src/cli/: builders.rs  flags.rs  password.rs  repository.rs  version.rs
src/cli/builders/: length.rs
src/command_line/: builders.rs  password.rs  repository.rs
src/password/: builder.rs  builders.rs  length.rs  repository.rs
tests/: cli.rs
