[package]
name = "password_manager"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[[bin]]
name = "pwm"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.14"
tempfile = "3.12.0"
